bpo-16806: Fix `lineno` and `col_offset` for multi-line string tokens (GH-10021)